# cvt_samples

./: .gitattributes  CMakeLists.txt
cmake/: cvt_detectCompiler.cmake  cvt_utils.cmake  external_gtest.cmake
src/: CMakeLists.txt
src/base/: CMakeLists.txt  cvt_base.cpp  cvt_base.h
src/cpp/: hello_string.cpp
src/cv/: cout_mat.cpp  print_clinfo.cpp  read_image.cpp
src/ffmpeg/: CMakeLists.txt
src/study/: features2d_homography_find_obj.cpp  features_description.cpp  features_description_opt.cpp  harris_detector.cpp
tests/: CMakeLists.txt  main.cpp
